src/objects/Wait_List_Type__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Opened__c</fullName>
        <label>Date Opened</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Up__c</fullName>
        <defaultValue>&apos;50&apos;</defaultValue>
        <label>% Lease Up</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_is_Open__c</fullName>
        <defaultValue>false</defaultValue>
        <label>List is Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <label>Long Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Max_Refusals__c</fullName>
        <label>Max Refusals</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RADDisabled_Family__c</fullName>
        <label>Disabled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RADFamily__c</fullName>
        <label>Family</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RADHomeless_with_disability__c</fullName>
        <label>Homeless with disability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RADLive_Work_in_City_of_San_Diego__c</fullName>
        <label>Live/Work in City of San Diego</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RADNon_Elderly_Disabled__c</fullName>
        <label>Elderly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RADVeteran_Active_Military__c</fullName>
        <label>Veteran / Active Military</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reset_Date__c</fullName>
        <label>Reset Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sort_Order_1__c</fullName>
        <label>Sort Order 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Date/Time</fullName>
                </value>
                <value>
                    <fullName>Date only</fullName>
                </value>
                <value>
                    <fullName>Income Targeting</fullName>
                </value>
                <value>
                    <fullName>Preferences</fullName>
                </value>
                <value>
                    <fullName>Target Funding</fullName>
                </value>
                <value>
                    <fullName>Lottery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sort_Order_2__c</fullName>
        <label>Sort Order 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Date/Time</fullName>
                </value>
                <value>
                    <fullName>Date only</fullName>
                </value>
                <value>
                    <fullName>Income Targeting</fullName>
                </value>
                <value>
                    <fullName>Preferences</fullName>
                </value>
                <value>
                    <fullName>Target Funding</fullName>
                </value>
                <value>
                    <fullName>Lottery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sort_Order_3__c</fullName>
        <label>Sort Order 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Date/Time</fullName>
                </value>
                <value>
                    <fullName>Date only</fullName>
                </value>
                <value>
                    <fullName>Income Targeting</fullName>
                </value>
                <value>
                    <fullName>Preferences</fullName>
                </value>
                <value>
                    <fullName>Target Funding</fullName>
                </value>
                <value>
                    <fullName>Lottery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Statistics_Since__c</fullName>
        <label>Statistics Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Housed__c</fullName>
        <label>Total Housed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_In_Process__c</fullName>
        <label>Total In Process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Rejected__c</fullName>
        <label>Total Rejected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Selected__c</fullName>
        <label>Total Selected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Waiting_List_Type__c</fullName>
        <label>Waiting List  Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public Housing</fullName>
                </value>
                <value>
                    <fullName>Tenant Based</fullName>
                </value>
                <value>
                    <fullName>Project Based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YARDI_HMY__c</fullName>
        <externalId>true</externalId>
        <label>YARDI ID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Wait List Type</label>
    <listViews>
        <fullName>Main</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>YARDI_HMY__c</columns>
        <columns>Description__c</columns>
        <columns>Lease_Up__c</columns>
        <columns>Total_Housed__c</columns>
        <columns>Total_In_Process__c</columns>
        <columns>Total_Rejected__c</columns>
        <columns>Total_Selected__c</columns>
        <columns>Waiting_List_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>Main</label>
    </listViews>
    <nameField>
        <label>Wait List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wait List Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>